<resources>
    <string name="app_name">InventoryApp1</string>
    <string name="btn_inventory_next1">Next</string>
    <string name="btn_inventory_back_step1">Back</string>
    <string name="btn_inventory_final_step1">Submit the product</string>
    <string name="set_inventory_max_items1">10</string>
    <string name="txt_inventory_other1">&#160;out of&#160;</string>
    <string name="btn_inventory_reset1">Reset</string>
    <string name="intro_inventory">Please check all your inventory.</string>
    <string name="intro_inventory_notes1">Step 1/5</string>
    <string name="intro_inventory_notes2">Step 2/5</string>
    <string name="intro_inventory_notes3">Step 3/5</string>
    <string name="intro_inventory_notes4">Step 4/5</string>
    <string name="any_other_feedback">Your name</string>
    <string name="msg_feedback_confirmation">Thank you for providing your product.</string>
    <string name="msg_feedback_final_confirmation">We thank you for your time spent.</string>
    <string name="txt_tbl_title_products1">Products</string>
    <string name="txt_tbl_title_suppliers1">Suppliers</string>
    <string name="txt_tbl_title_avr_price1">Average price</string>
    <string name="txt_tbl_cal_items_products1">100</string>
    <string name="txt_tbl_cal_items_suppliers1">500</string>
    <string name="txt_tbl_cal_items_avr_price1">99</string>
    <string name="txt_tbl_header_headline1">Your central place to organize inventory.</string>
    <string name="txt_tbl_header_logo_alt1">Inventory App</string>
    <string name="txt_tbl_feature_list_inventory_alt1">Inventory App</string>
    <string name="txt_sec_1_cat_1_cpromos_title_1">Show products</string>
    <string name="txt_sec_1_cat_1_cpromos_title_2">Read more</string>
    <string name="no_products">No products found.</string>
    <string name="no_internet_connection">no_internet_connection</string>
    <string name="no_db_connection">no_db_connection</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Products Settings</string>
    <string name="action_insert_inventory_data">Insert inventory data</string>
    <string name="action_delete_all_entries">Delete all products</string>
    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="title_cat_inventory_overview">Inventory overview</string>
    <string name="title_cat_inventory_assets_product_overview">Product overview</string>
    <string name="title_cat_inventory_assets_product_name">Item</string>
    <string name="title_cat_inventory_assets_product_price">Cost per item</string>
    <string name="title_cat_inventory_assets_product_quantity">Quantity</string>
    <string name="title_cat_inventory_logistics_overview">Supplier overview</string>
    <string name="hint_pet_product_name">Product name</string>
    <string name="category_inventory_price">Price</string>
    <string name="category_inventory_quantity">Quantity</string>
    <string name="category_inventory_supplier_name">Supplier name</string>
    <string name="category_inventory_supplier_phone">Supplier phone</string>
    <string name="hint_inventory_assets_product_name">Headphones</string>
    <string name="hint_inventory_assets_product_price">8.99</string>
    <string name="hint_inventory_assets_product_quantity">249</string>
    <string name="hint_inventory_logistics_supplier_name">Sony</string>
    <string name="hint_inventory_logistics_supplier_phone">386 5901 18996</string>
    <string name="hint_inventory_currency_default">EUR</string>
    <string name="hint_inventory_pcs">Pcs.</string>
    <string name="unit_inventory_weight">kg</string>
    <string name="unit_inventory_pcs">Pcs.</string>
    <string name="unit_inventory_currency_default">EUR</string>
    <string name="inventory_status_unknown">Unknown</string>
    <string name="inventory_status_stock_0">0</string>
    <string name="inventory_status_stock_full">Full stock</string>
    <string name="inventory_status_stock_in_stock">In stock</string>
    <string name="inventory_currency_default">EUR</string>
    <string name="inventory_curreny_option1">USD</string>
    <string name="inventory_curreny_option2">GBP</string>
    <string name="inventory_curreny_option3">CHF</string>
    <string name="inventory_unit_stockstorage_default">Pcs.</string>
    <string name="inventory_unit_stockstorage_option1">Pc.</string>
</resources>
